add div in the body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   Hello world
   Trying to make a website using replit and github
+  <div>
+    This is the first div in the body
+  </div>
   <script src="script.js"></script>
 </body>
 
